--- a/src/main/resources/templates/form/Nik.html
+++ b/src/main/resources/templates/form/Nik.html
@@ -46,11 +46,11 @@
 
 <th:block layout:fragment="add-scripts">
     <script src="/../../dist/js/biodata.js"></script>
-    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script>
         $('#submit-nik').click(function () {
             tableBiodataNik.create($('#val-nik').val());
+            $('#val-nik').val('');
         })
     </script>
 </th:block>
