--- a/src/main/resources/templates/form/Pendidikan.html
+++ b/src/main/resources/templates/form/Pendidikan.html
@@ -16,122 +16,106 @@
 
 <div layout:fragment="content-body">
     <div class="col-12">
-        <div class="card">
+        <div class="card card-dark">
             <div class="card-header">
                 <h3 class="card-title">List Biodata</h3>
             </div>
-            
+
             <!-- /.card-header -->
-            <div class="card-body table-responsive">
-                <table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata"
-                    style="width:100%"></table>
+            <div class="card-body" style="height: auto;">
+                <div class="input-group" style="width: 7cm;">
+                    <input class="form-control" id="input-id" type="text" placeholder="Masukkan Id-Person">
+                    <button class="btn btn-orange" id="btn-set-id">Set</button>
+                </div>
             </div>
-            <!-- /.card-body -->
+
+            <form role="form">
+                <div class="card-body table-responsive">
+                    <table class="table table-striped table-bordered table-hover nowrap" id="tablePendidikan"
+                        style="width:100%"></table>
+                </div>
+                <!-- /.card-body -->
+                <div class="card-footer">
+                    <p align="right">
+                        <button class="btn btn-orange" type="button" id="btn-save-pendidikan">Submit</button>
+                    </p>
+                </div>
+            </form>
+
         </div>
         <!-- /.card -->
     </div>
 
-    <div class="modal fade" id="modal-biodata">
+    <div class="modal fade" id="modal-pendidikan">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Form Biodata</h4>
+                    <h4 class="modal-title">Form Pendidikan</h4>
                     <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="card-header">
-
-                    </div>
-                    <form role="form" id="biodataForm">
-                        <input name="id" type="hidden" />
-                        <div class="multi-field-wrapper">
-                            <div class="multi-fields">
-                                <div class="multi-field">
-                                    <div class="form-group">
-                                        <label>Jenjang</label> <select
-                                            class="form-control select2 select2-hidden-accessible" style="width: 100%;"
-                                            data-select2-id="1" name="jenjang" tabindex="-1" aria-hidden="true">
-                                            <option data-select2-id="01">SD</option>
-                                            <option data-select2-id="02">SMP</option>
-                                            <option data-select2-id="03">SMA</option>
-                                            <option data-select2-id="04">Perguruan Tinggi</option>
-                                            r
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Institusi</label><input type="text" class="form-control" name="institusi"
-                                            id="institusi">
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Tahun Masuk</label><input type="text" class="form-control" name="masuk"
-                                            id="masuk">
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Tahun Lulus</label><input type="text" class="form-control" name="lulus"
-                                            id="lulus">
-                                    </div>
-                                    <button type="button" class="btn btn-primary remove">Remove</button>
-                                    <br>
-                                    <br>
-                                </div>
-                            </div>
-                            <p align="right">
-                                <button type="button" class="btn btn-primary add">Add</button>
-                            </p>
+                    <form role="form" id="pendidikanForm">
+                        <input name="idPerson" type="hidden" />
+                        <div class="form-group">
+                            <label>Jenjang</label>
+                            <select class="form-control select2" style="width: 100%;" id="jenjang" name="jenjang"
+                                tabindex="-1" aria-hidden="true">
+                                <option value="SD">SD</option>
+                                <option value="SMP">SMP</option>
+                                <option value="SMA">SMA</option>
+                                <option value="Diploma">Diploma</option>
+                                <option value="Sarjana">Sarjana</option>
+                                <option value="Magister">Magister</option>
+                                <option value="Doktor">Doktor</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Institusi</label><input type="text" class="form-control" name="institusi"
+                                id="institusi">
+                        </div>
+                        <div class="form-group">
+                            <label>Tahun Masuk</label><input type="text" class="form-control" name="tahunMasuk"
+                                id="masuk">
+                        </div>
+                        <div class="form-group">
+                            <label>Tahun Lulus</label><input type="text" class="form-control" name="tahunLulus"
+                                id="lulus">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer justify-content-between">
                     <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
-                    <button class="btn btn-primary" id="btn-save-biodata" type="button">Save</button>
+                    <button class="btn btn-orange" id="btn-add" type="button">Add</button>
                 </div>
             </div>
-            <!-- /.modal-content -->
         </div>
-        <!-- /.modal-dialog -->
     </div>
-
 </div>
 
 
 <th:block layout:fragment="add-scripts">
-    <script src="../assets/js/biodata.js"></script>
-    <script src="../../plugins/jquery/jquery.min.js"></script>
+    <script src="/../../dist/js/biodata.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script>
-        tableBiodata.create();
-
-        $('#btn-cari-pasien').click(function () {
-            var tanggalLahir = new Date($('#tanggalLahir').val()) * 1;
-            tableKelolaPasien.create();
+        $('#btn-save-pendidikan').hide();
+        $('#btn-set-id').click(function () {
+            formPendidikan.resetForm();
+            $('#modal-pendidikan').modal('show')
         });
 
-        $('#btn-tambah-biodata').click(function () {
-            formBiodata.resetForm();
-            $('#modal-biodata').modal('show')
-        });
-
-        $('#btn-save-biodata').click(function () {
-            formBiodata.saveForm()
+        var listpendidikan = [];
+        $('#btn-add').click(function () {
+            formPendidikan.create();
+            $('#btn-save-pendidikan').show();
         })
-    </script>
-    <script>
-        $('.multi-field-wrapper').each(
-            function () {
-                var $wrapper = $('.multi-fields', this);
-                $(".add", $(this)).click(
-                    function (e) {
-                        $('.multi-field:first-child', $wrapper).clone(
-                            true).appendTo($wrapper).find('input')
-                            .val('').focus();
-                    });
-                $('.multi-field .remove', $wrapper).click(function () {
-                    if ($('.multi-field', $wrapper).length > 1)
-                        $(this).parent('.multi-field').remove();
-                });
-            });
 
+        $('#btn-save-pendidikan').click(function () {
+            formPendidikan.saveForm($('#input-id').val(), listpendidikan);
+            listpendidikan = [];
+            $('#input-id').val('');
+        })
     </script>
 </th:block>
 
